--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <div class="card">
         <h2><i class="fa fa-map-marker"></i><span id="location"></span></h2>
-        <h6 id="" weather></h6>
+        <h6 id="weather"></h6>
         <h4><span id="temp"></span><sup>o</sup>C</h4>
         <img src="" id="icon" />
         <button onclick="window.location.reload()" class="refresh">
@@ -33,4 +33,26 @@
   </body>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
   <!-- <script src="jquery-3.6.0.min.js"></script> -->
+  <script>
+    const link =
+      "https://api.openweathermap.org/data/2.5/weather?q=delhi&appid=8b29556ae6d67eebac8656f1ea1d6f9a";
+    var request = new XMLHttpRequest();
+    request.open("GET", link, true);
+    request.onload = function () {
+      const obj = JSON.parse(this.response);
+      console.log(obj);
+      document.getElementById("weather").innerHTML = obj.weather[0].description;
+      document.getElementById("location").innerHTML = obj.name;
+      document.getElementById("temp").innerHTML = obj.main.temp;
+    };
+    // console.log(obj.main.temp);
+    // document.getElementById("weather").innerHTML = obj.weather[0].description;
+    if (request.status >= 200 && request.status < 400) {
+      // const temp = obj.main.temp;
+      // console.log(temp);
+    } else {
+      console.log("city data is not available");
+    }
+    request.send();
+  </script>
 </html>
